<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoPrincipal"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <com.uni.learningchess.VistaAvatar
        android:id="@+id/vistaAvatar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textoTituloApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/textoTituloApp"
            android:textAllCaps="true"
            android:textColor="@color/tituloCapitulo1"
            android:textSize="@dimen/textSizeTituloCapitulos"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textoContenidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/secciones"
            android:textAllCaps="false"
            android:textColor="@color/tituloCapitulo2"
            android:textSize="@dimen/textSizeSubTituloCapitulos"
            android:textStyle="italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton1"
                style="@style/boton.rojo"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="boton1"
                android:text="@string/seccion1" />

            <Button
                android:id="@+id/boton2"
                style="@style/boton.verde"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="boton2"
                android:text="@string/seccion2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton3"
                style="@style/boton.azul"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:elevation="1dp"
                android:onClick="boton3"
                android:text="@string/seccion3"
                android:visibility="visible" />

            <Button
                android:id="@+id/boton4"
                style="@style/boton.amarillo"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="boton4"
                android:text="@string/seccion4" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
