<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:orientation="horizontal"
    android:padding="3dp">

    <TextView
        android:id="@+id/tvId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/fondoDialog"
        android:gravity="center"
        android:maxLines="1"
        android:padding="3dp"
        android:text="@string/idUsuario"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvNombreUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="2"
        android:background="@color/fondoDialog"
        android:maxLines="1"
        android:padding="3dp"
        android:text="@string/nombreUsuario"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvFechaRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/fondoDialog"
        android:gravity="center"
        android:maxLines="1"
        android:padding="3dp"
        android:text="@string/fechaInicio"
        android:textColor="@android:color/black" />
</LinearLayout>